Adding files for eeI three-body Jastrow.  Not done yet.
git-svn-id: http://qmcpack.googlecode.com/svn@3885 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -16,6 +16,7 @@ SET(JASTROW_SRCS
   Jastrow/PadeJastrowBuilder.cpp
   Jastrow/JastrowBuilder.cpp
   Jastrow/BsplineJastrowBuilder.cpp
+  Jastrow/eeI_JastrowBuilder.cpp
   Jastrow/kSpaceJastrow.cpp
   Jastrow/kSpaceJastrowBuilder.cpp
   Jastrow/RPAJastrow.cpp
