Adding VHXC potential and fixed return value of MPC for physical=yes.
git-svn-id: http://qmcpack.googlecode.com/svn@3902 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -51,7 +51,7 @@ ENDIF(OHMMS_DIM MATCHES 3)
 #ENDIF(HAVE_LIBFFTW)
 
 IF(HAVE_LIBFFTW)
-  SET(HAMSRCS ${HAMSRCS} MPC.cpp)
+  SET(HAMSRCS ${HAMSRCS} MPC.cpp VHXC.cpp)
 ENDIF(HAVE_LIBFFTW)
 
 ADD_LIBRARY(qmcham ${HAMSRCS})
