add density post processing tool
git-svn-id: http://qmcpack.googlecode.com/svn@3945 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -18,6 +18,7 @@ SET(QMCDRIVERS
   VMC/VMCSingle.cpp
   ForwardWalking/FWSingleOMP.cpp
   ForwardWalking/FWSingleMPI.cpp
+  ForwardWalking/FRSingleOMP.cpp
   VMC/VMCFactory.cpp
   WFMC/WFMCUpdateAll.cpp
   DMC/DMCOMP.cpp
