Use a macro in the code to enable Bryan's experiments.
git-svn-id: http://qmcpack.googlecode.com/svn@4194 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -78,10 +78,10 @@ ENDIF(OHMMS_DIM MATCHES 3)
 IF(QMC_BUILD_COMPLETE)
   SET(FERMION_SRCS ${FERMION_SRCS}
     PlaneWave/PWOrbitalBuilder.cpp
-    Fermion/DiracDeterminantTruncation.cpp
-    Fermion/MultiDiracDeterminantBase.cpp
-    Fermion/DiracDeterminantIterative.cpp
-    Fermion/ILUGMRESInterface.c
+    #    Fermion/DiracDeterminantTruncation.cpp
+    #    Fermion/MultiDiracDeterminantBase.cpp
+    #    Fermion/DiracDeterminantIterative.cpp
+    #    Fermion/ILUGMRESInterface.c
     )
   IF(QMC_COMPLEX)
     SET(FERMION_SRCS ${FERMION_SRCS}
