changes for imaginary build.
git-svn-id: http://qmcpack.googlecode.com/svn@4208 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -56,7 +56,6 @@ IF(QMC_BUILD_COMPLETE)
   SET(QMCDRIVERS ${QMCDRIVERS}
     PolymerEstimator.cpp
     RQMCMultiple.cpp
-    RQMCMultiplePbyP.cpp
     MultiChain.cpp
     SpaceWarp.cpp
     RQMCMultiWarp.cpp
@@ -73,7 +72,13 @@ IF(QMC_BUILD_COMPLETE)
     CorrelatedSampling/CSVMCUpdateAll.cpp
     CorrelatedSampling/CSVMCUpdatePbyP.cpp
   )
+  IF(!QMC_COMPLEX)
+    SET(QMCDRIVERS ${QMCDRIVERS}
+    RQMCMultiplePbyP.cpp
+    )
+  ENDIF(!QMC_COMPLEX)
 ENDIF(QMC_BUILD_COMPLETE)
+
 
 ####################################
 # create libqmc 
