--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -68,9 +68,11 @@ SET(PARTICLE
 )
 
 IF(QMC_BUILD_COMPLETE)
+  IF(!QMC_COMPLEX)
   SET(PARTICLE ${PARTICLE}
     Particle/Bead_ParticleSet.cpp 
     )
+  ENDIF(!QMC_COMPLEX)
 ENDIF(QMC_BUILD_COMPLETE)
 
 SET(PARTICLEIO
