cmake changes for real and imaginary build
git-svn-id: http://qmcpack.googlecode.com/svn@4209 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -68,11 +68,11 @@ SET(PARTICLE
 )
 
 IF(QMC_BUILD_COMPLETE)
-  IF(!QMC_COMPLEX)
+  IF(NOT QMC_COMPLEX)
   SET(PARTICLE ${PARTICLE}
     Particle/Bead_ParticleSet.cpp 
     )
-  ENDIF(!QMC_COMPLEX)
+  ENDIF(NOT QMC_COMPLEX)
 ENDIF(QMC_BUILD_COMPLETE)
 
 SET(PARTICLEIO
