comment out boost build for BUILD_QMCTOOLS
git-svn-id: http://qmcpack.googlecode.com/svn@4219 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -448,8 +448,8 @@ INCLUDE_DIRECTORIES(
 ADD_DEFINITIONS(-DHAVE_CONFIG_H -DH5_USE_16_API -DAPPNAMESPACE=qmcplusplus)
 #ADD_DEFINITIONS(-DDISABLE_WS_CELL)
 
-IF(BUILD_QMCTOOLS)
-  SUBDIRS(boost)
-ENDIF(BUILD_QMCTOOLS)
+# IF(BUILD_QMCTOOLS)
+#   SUBDIRS(boost)
+# ENDIF(BUILD_QMCTOOLS)
 
 SUBDIRS(src)
