--- a/branches/cuda-20080919/CMakeLists.txt
+++ b/branches/cuda-20080919/CMakeLists.txt
@@ -250,7 +250,7 @@ INCLUDE(${PROJECT_CMAKE}/FindHDF5.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindBoost.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindPkgConfig.cmake)
 INCLUDE(${PROJECT_CMAKE}/cuda/FindCUDA.cmake)
-#INCLUDE(${PROJECT_CMAKE}/FindFFTW.cmake)
+INCLUDE(${PROJECT_CMAKE}/FindFFTW.cmake)
 
 IF(QMC_MPI)
   IF(MPIP_PROFILE)
@@ -282,11 +282,11 @@ ELSE(FOUND_BOOST)
   MESSAGE(FATAL_ERROR "Require boost 1.33.x or higher. Set BOOST_HOME")
 ENDIF(FOUND_BOOST)
 
-#IF(FOUND_FFTW)
-#  SET(HAVE_LIBFFTW 1)
-#  INCLUDE_DIRECTORIES(${FFTW_INCLUDE_DIR})
-#  LINK_LIBRARIES(${FFTW_LIBRARY})
-#ENDIF(FOUND_FFTW)
+IF(FOUND_FFTW)
+  SET(HAVE_LIBFFTW 1)
+  INCLUDE_DIRECTORIES(${FFTW_INCLUDE_DIR})
+  LINK_LIBRARIES(${FFTW_LIBRARY})
+ENDIF(FOUND_FFTW)
 
 IF(FOUND_HDF5)
   SET(HAVE_LIBHDF5 1)
