Adding a simple Orbital for simple gaussian orbitals as wavefunctions for ions and nuclei.
git-svn-id: http://qmcpack.googlecode.com/svn@4256 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -21,6 +21,8 @@ SET(JASTROW_SRCS
   Jastrow/kSpaceJastrowBuilder.cpp
   Jastrow/RPAJastrow.cpp
   Jastrow/singleRPAJastrowBuilder.cpp
+  IonOrbital.cpp
+  IonOrbitalBuilder.cpp
 )
 
 #common jastrows for three D
