--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -44,11 +44,6 @@ IF(QMC_BUILD_COMPLETE)
     )
 ENDIF(QMC_BUILD_COMPLETE)
 
-# common ferminoic wavefunctions
-SET(FERMION_SRCS
-  Fermion/DiracDeterminantBase.cpp
-)
-
 # wavefunctions only availbale to 3-dim problems
 IF(OHMMS_DIM MATCHES 3)
   SET(FERMION_SRCS ${FERMION_SRCS}
@@ -100,8 +95,10 @@ IF(QMC_BUILD_COMPLETE)
 ENDIF(QMC_BUILD_COMPLETE)
 
 SET(FERMION_SRCS ${FERMION_SRCS}
+  Fermion/DiracDeterminantBase.cpp
   Fermion/SlaterDet.cpp
   Fermion/SlaterDetBuilder.cpp
+  MultiSlaterDeterminant.cpp
   BasisSetFactory.cpp
   TrialWaveFunction.cpp
   WaveFunctionFactory.cpp
