More groundwork for CUDA optimization.
git-svn-id: http://qmcpack.googlecode.com/svn@4273 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/src/QMCDrivers/CMakeLists.txt
+++ b/branches/cuda-20080919/src/QMCDrivers/CMakeLists.txt
@@ -44,7 +44,8 @@ SET(QMCDRIVERS
 IF(QMC_CUDA)
    SET(QMCDRIVERS ${QMCDRIVERS}
    VMC/VMCcuda.cpp
-   DMC/DMCcuda.cpp)
+   DMC/DMCcuda.cpp
+   QMCCostFunctionCUDA.cpp)
 ENDIF(QMC_CUDA)
 
 #  ../Estimators/PairCorrEstimator.cpp
