cost function detects loglinear parameters automatically. added stabilization features to linear opt.
git-svn-id: http://qmcpack.googlecode.com/svn@4281 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -67,6 +67,11 @@ ENDIF(INTEL_MKL)
 #TARGET_LINK_LIBRARIES(mo2grid3d qmc qmcbase)
 #ENDIF(NOT HAVE_MPI)
 
+# Get rid of error message
+if(COMMAND cmake_policy)
+  cmake_policy(SET CMP0003 NEW)
+endif(COMMAND cmake_policy)
+
 ####################################
 #general qmcapp for multiple configurations, hamiltonians and wavefunctions.
 ####################################
