Removed unneeded file.
git-svn-id: http://qmcpack.googlecode.com/svn@4298 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/src/CMakeLists.txt
+++ b/branches/cuda-20080919/src/CMakeLists.txt
@@ -29,8 +29,7 @@ SET(UTILITIES
 
 IF(QMC_CUDA)
    SET(UTILITIES ${UTILITIES} 
-       Numerics/CUDA/cuda_inverse.cu 
-       Utilities/cuda_allocator.cpp)
+       Numerics/CUDA/cuda_inverse.cu )
 ENDIF(QMC_CUDA)
 
 
