Adding new implementation of device_vector and host_vector.
git-svn-id: http://qmcpack.googlecode.com/svn@4305 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/src/CMakeLists.txt
+++ b/branches/cuda-20080919/src/CMakeLists.txt
@@ -29,7 +29,8 @@ SET(UTILITIES
 
 IF(QMC_CUDA)
    SET(UTILITIES ${UTILITIES} 
-       Numerics/CUDA/cuda_inverse.cu )
+       Numerics/CUDA/cuda_inverse.cu 
+       CUDA/gpu_vector.cpp)
 ENDIF(QMC_CUDA)
 
 
