--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -78,9 +78,9 @@ endif(COMMAND cmake_policy)
 ADD_EXECUTABLE(qmcapp ${QMCMAIN})
 
 TARGET_LINK_LIBRARIES(qmcapp qmc qmcdriver qmcham qmcwfs qmcbase qmcutil)
-#IF(HAVE_EINSPLINE)
-#  TARGET_LINK_LIBRARIES(qmcapp einspline)
-#ENDIF(HAVE_EINSPLINE)	
+IF(HAVE_EINSPLINE)
+  TARGET_LINK_LIBRARIES(qmcapp einspline)
+ENDIF(HAVE_EINSPLINE)	
 IF(NOT MAC_VECLIB)
   TARGET_LINK_LIBRARIES(qmcapp ${LAPACK_LIBRARY} ${BLAS_LIBRARY} ${FORTRAN_LIBS})
 ENDIF(NOT MAC_VECLIB)
