Add G/L to Walker and use loadWalker/saveWalker of ParticleSet. Removed Walker::Drift.
git-svn-id: http://qmcpack.googlecode.com/svn@4335 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -57,14 +57,14 @@ IF(QMC_BUILD_COMPLETE)
     PolymerEstimator.cpp
     MultiChain.cpp
     RQMCMultiple.cpp
-    ../Estimators/RQMCMultipleEstimator.cpp
     ../Estimators/ComboPolymerEstimator.cpp
     ../Estimators/CSEnergyEstimator.cpp
     ../Estimators/CSPolymerEstimator.cpp
     ../Estimators/MJPolymerEstimator.cpp
     ../Estimators/HFDHE2PolymerEstimator.cpp
   )
-# REMOVE neglected/buggy
+# REMOVE broken stuff
+#    ../Estimators/RQMCMultipleEstimator.cpp
 #    SpaceWarp.cpp
 #    RQMCMultiWarp.cpp
 #    VMC/VMCMultipleWarp.cpp
