Replace QMC_BUILD_COMPLETE by QMC_BUILD_LEVEL.
git-svn-id: http://qmcpack.googlecode.com/svn@4340 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -67,13 +67,11 @@ SET(PARTICLE
   LongRange/LRCoulombSingleton.cpp
 )
 
-IF(QMC_BUILD_COMPLETE)
+IF(QMC_BUILD_LEVEL GREATER 2)
   IF(NOT QMC_COMPLEX)
-  SET(PARTICLE ${PARTICLE}
-    Particle/Bead_ParticleSet.cpp 
-    )
+    SET(PARTICLE ${PARTICLE} Particle/Bead_ParticleSet.cpp )
   ENDIF(NOT QMC_COMPLEX)
-ENDIF(QMC_BUILD_COMPLETE)
+ENDIF(QMC_BUILD_LEVEL GREATER 2)
 
 SET(PARTICLEIO
   ParticleTags.cpp 
@@ -92,6 +90,7 @@ IF(HAVE_LIBHDF5)
 ENDIF(HAVE_LIBHDF5)
 
 ADD_LIBRARY(qmcbase ${PARTICLE}  ${PARTICLEIO})
+
 #IF(QMC_BUILD_STATIC)
 #  ADD_LIBRARY(qmcbase STATIC ${PARTICLE}  ${PARTICLEIO})
 #ELSE(QMC_BUILD_STATIC)
@@ -108,8 +107,8 @@ IF(BUILD_QMCTOOLS)
   SUBDIRS(QMCTools)
 ENDIF(BUILD_QMCTOOLS)
 
-IF(BUILD_SANDBOX)
+#IF(BUILD_SANDBOX)
   SUBDIRS(SandBox)
-ENDIF(BUILD_SANDBOX)
+  #ENDIF(BUILD_SANDBOX)
 
-#SUBDIRS(SQD)
+SUBDIRS(SQD)
