--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -52,7 +52,7 @@ IF(HAVE_MPI)
 ENDIF(HAVE_MPI) 
 
 
-IF(QMC_BUILD_COMPLETE)
+IF(QMC_BUILD_LEVEL GREATER 1)
   SET(QMCDRIVERS ${QMCDRIVERS}
     PolymerEstimator.cpp
     MultiChain.cpp
@@ -79,7 +79,7 @@ IF(QMC_BUILD_COMPLETE)
 #    )
 #  ENDIF(NOT QMC_COMPLEX)
 
-ENDIF(QMC_BUILD_COMPLETE)
+ENDIF(QMC_BUILD_LEVEL GREATER 1)
 
 
 ####################################
