Replace QMC_BUILD_COMPLETE by QMC_BUILD_LEVEL
git-svn-id: http://qmcpack.googlecode.com/svn@4342 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/config.h.cmake.in
+++ b/trunk/src/config.h.cmake.in
@@ -29,8 +29,8 @@
 /* define the subversion last changed date */
 #cmakedefine QMCPLUSPLUS_LAST_CHANGED_DATE  "@QMCPLUSPLUS_LAST_CHANGED_DATE@"
 
-/* define QMC_BUILD_COMPLETE */
-#cmakedefine QMC_BUILD_COMPLETE @QMC_BUILD_COMPLETE@
+/* define QMC_BUILD_LEVEL */
+#cmakedefine QMC_BUILD_LEVEL @QMC_BUILD_LEVEL@
 
 /* define PRINT_DEBUG */
 #cmakedefine PRINT_DEBUG @PRINT_DEBUG@
