Adding Chiesa kinetic energy correction from mainline code.
git-svn-id: http://qmcpack.googlecode.com/svn@4345 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/src/QMCHamiltonians/CMakeLists.txt
+++ b/branches/cuda-20080919/src/QMCHamiltonians/CMakeLists.txt
@@ -7,6 +7,7 @@ SET(HAMSRCS
   NonLocalTOperator.cpp
   NumericalRadialPotential.cpp
   RPAPressure.cpp
+  ChiesaCorrection.cpp
 )
 #  FSAtomPseudoPot.cpp
 
