momentum estimator work
git-svn-id: http://qmcpack.googlecode.com/svn@4433 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -17,6 +17,7 @@ SET(HAMSRCS
   PairCorrEstimator.cpp
   DensityEstimator.cpp
   SkEstimator.cpp
+  MomentumEstimator.cpp
 )
 #  FSAtomPseudoPot.cpp
 
